--- a/vcproj/nio.vcxproj.filters
+++ b/vcproj/nio.vcxproj.filters
@@ -43,5 +43,8 @@
     <ClCompile Include="..\hydrogen\nio\socket_acceptor.cc">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="exceptions.cc">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
