--- a/vcproj/hydrogen-nio.vcxproj
+++ b/vcproj/hydrogen-nio.vcxproj
@@ -19,16 +19,17 @@
     <ClInclude Include="..\hydrogen\nio\socket_stream.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\hydrogen\nio\exceptions.cc" />
     <ClCompile Include="..\hydrogen\nio\protocols.cc" />
     <ClCompile Include="..\hydrogen\nio\stream_socket.cc" />
     <ClCompile Include="..\hydrogen\nio\socket_acceptor.cc" />
     <ClCompile Include="..\hydrogen\nio\socket_stream.cc" />
-    <ClCompile Include="exceptions.cc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BCF2CB2A-6ED3-46CF-BD1A-E1093B87689E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>nio</RootNamespace>
+    <ProjectName>hydrogen-nio</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -54,8 +55,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IntDir>$(Configuration)\$(ProjectName)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IntDir>$(Configuration)\$(ProjectName)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
