Add common/string.h and hydrogen-common test code

--- a/test/common_tests/common_tests.vcxproj.filters
+++ b/test/common_tests/common_tests.vcxproj.filters
@@ -11,17 +11,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\hydrogen\common\stdhelp.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\hydrogen\common\varadic.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\hydrogen\common\queue_buffer.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\hydrogen\common\string.h">
-      <Filter>include</Filter>
-    </ClInclude>
+    <ClCompile Include="main.cc">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="string_tests.cc">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
