--- a/test/common_tests/common_tests.vcxproj
+++ b/test/common_tests/common_tests.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1C84960C-C82F-49C0-814D-7D142EBD7423}</ProjectGuid>
+    <ProjectGuid>{A20C96E6-F91D-4392-87ED-27264C48B71B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>pingpong</RootNamespace>
+    <RootNamespace>common_tests</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -80,7 +80,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="pingpong.cc" />
+    <ClCompile Include="main.cc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="string_tests.cc">
+      <FileType>CppHeader</FileType>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
