Refactor test code
Bugfix: string.substr(0) returns an empty string

--- a/test/common_tests/common_tests.vcxproj
+++ b/test/common_tests/common_tests.vcxproj
@@ -87,6 +87,9 @@
       <FileType>CppHeader</FileType>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
